@@ -36,6 +36,9 @@ o Added automatic failover -- multiple server pools (defineServer lines) will
 
 PostProcessor:
 
+o Fixed the defunct process bug affecting some Linux distributions (thanks
+  georgek)
+
 o No longer using /bin/file for identifying rars. Running /bin/file via twisted
   seems to have triggered a twisted bug where it wouldn't allow the /bin/file
   process to exit cleanly (on some if not all platforms)
